[package]
name = "accessd"
version = "0.1.0"
authors = ["cmusser@sonic.net"]

[dependencies]
byteorder = "1.0.0"
clap = "2"
data-encoding = "1.2.0"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0.10"
serde_cbor = "0.6.1"
serde_yaml = "0.7.1"
sodiumoxide = "0.0.15"
tokio-core = "0.1"
tokio-process = "0.1.1"

[lib]
name = "access"
path = "src/lib.rs"

[[bin]]
name = "accessd"
path = "src/accessd.rs"

[[bin]]
name = "access"
path = "src/access.rs"

[[bin]]
name = "access-keygen"
path = "src/access-keygen.rs"

